@@ -1812,6 +1812,12 @@ rb_data_object_wrap(VALUE klass, void *datap, RUBY_DATA_FUNC dmark, RUBY_DATA_FU
     return newobj_of(klass, T_DATA, (VALUE)dmark, (VALUE)dfree, (VALUE)datap);
 }
 
+#undef rb_data_object_alloc
+RUBY_ALIAS_FUNCTION(rb_data_object_alloc(VALUE klass, void *datap,
+					 RUBY_DATA_FUNC dmark, RUBY_DATA_FUNC dfree),
+		    rb_data_object_wrap, (klass, datap, dmark, dfree));
+
+
 VALUE
 rb_data_object_zalloc(VALUE klass, size_t size, RUBY_DATA_FUNC dmark, RUBY_DATA_FUNC dfree)
 {
@@ -1826,6 +1832,11 @@ rb_data_typed_object_wrap(VALUE klass, void *datap, const rb_data_type_t *type)
     if (klass) Check_Type(klass, T_CLASS);
     return newobj_of(klass, T_DATA | (type->flags & ~T_MASK), (VALUE)type, (VALUE)1, (VALUE)datap);
 }
+
+#undef rb_data_typed_object_alloc
+RUBY_ALIAS_FUNCTION(rb_data_typed_object_alloc(VALUE klass, void *datap,
+					       const rb_data_type_t *type),
+		    rb_data_typed_object_wrap, (klass, datap, type));
 
 VALUE
 rb_data_typed_object_zalloc(VALUE klass, size_t size, const rb_data_type_t *type)
